--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@
     height: 73vmin;
     background: white;
     border: .1rem solid black;
+    border-radius: 10%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
