--- a/index.css
+++ b/index.css
@@ -98,6 +98,22 @@ span {
 .ASharp-2 {
     right: 6.5rem;
 }
+.green, .red {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 100%;
+    position: relative;
+}
+.green {
+    background-color: rgb(147,240,114);
+    top: 3rem;
+    right: 7rem;
+}
+.red {
+    background-color: rgb(255,124,136);
+    right: 4rem;
+    top: 2rem;
+}
 @media all and (min-width:1024px){
     .container {transform: rotate(360deg);
     }
